Updated index text.

--- a/app/views/static/construction.html.haml
+++ b/app/views/static/construction.html.haml
@@ -1,18 +1,23 @@
 
 =image_tag 'capoeira_banner.jpg', :alt => 'Capoeira Angola Ottawa logo'
 %h1
-  Capoeira Angola
+  Capoeira Angola in Ottawa
 #content_body  
   %p
-    Capoeira is an African-Brazilian art form that originated with African slaves brought by Portuguese colonists to work on the plantations that drove Brazil's economy from the 16th century onwards. 
+    Welcome! to the website of Grupo de Capoeira Semente do Jogo de Angola in Ottawa. Our website is still under construction but this page will tell you when and where you can take Capoeira Angola classes.
 
   %p
-    A blending of, combat, dance, music and ritual, the capoeira "jogo" (game) is a deep expression of the culture of the African diaspora in Brazil and an active remembering and preserving of that people`s history, myths, legends, songs, figures and adoptive land, the state of Bahia in the Northeast of Brazil, one of the great cradles of the cultures of the African diaspora.
+    Capoeira, an art form blending combat, dance, music and ritual, originated with forms of resistance invented by African people taken to Brazil as slaves from the 16th to 19th centuries. It has survived the centuries as a moving expression of the history and culture of Brazil’s African peoples.
 
   %p
-    Capoeira Angola is the name usually credited to Mestre Vicente Ferreira Pastinha (b. 1889, d. 1981). It is one of the two major branches of capoeira, the other, Capoeira Regional, having been developed by Mestre Bimba during roughly the same period in the 20th century. 
+    “Capoeira Angola” was developed by the celebrated Mestre (“master”) Vicente Ferreira Pastinha as a formal learning system to preserve capoeira as it once was passed on from generation to generation.  It challenges both the mind and body and cultivates inner discipline and the well-being of the individual as a whole, in a spirit of friendship and non-violence.
+
   %p
-    Capoeira Angola Training classes in Ottawa are led by Alex Stephens, a student of the group's founder, Mestre Jogo de Dentro (Salvador, Brazil), and Contramestra Colette (Montreal, Quebec). 
+    Ottawa classes are led by Alex Stephens, a student of Mestre Jogo de Dentro (Salvador Brazil), founder of Grupo de Capoeira Semente do Jogo de Angola and Contramestra Colette (Montreal, Quebec).
+
+  %p
+    All are welcome. Please come and try a first class free of charge!
+
   %p
     TRAINING SCHEDULE & LOCATION
   %p
