--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,10 @@
     %title
       Capoeira Angola Ottawa
     = stylesheet_link_tag :all
-    = javascript_include_tag :defaults 
+    =javascript_include_tag :defaults 
     = csrf_meta_tag
   %body
+    =render :partial => 'shared/nav'
     #content
       =yield
 
