added Colette's event to construction page.

--- a/app/views/static/construction.html.haml
+++ b/app/views/static/construction.html.haml
@@ -31,3 +31,9 @@
 
   %p
     Alex Stephens 613.293.6947 capoeira.angola at bell.net
+
+
+  %h1 
+    Events
+  %p
+    =image_tag 'carte_postal2011a.jpg'
