Devise and dec_auth added
Locations and practices are now working. That was way to much stuff in a single commit. Lets not do that again. Ever.

--- a/app/views/locations/_practice.html.haml
+++ b/app/views/locations/_practice.html.haml
@@ -1,3 +1,2 @@
-%td= t('daynames')[practice.day]
-%td= practice.start_time.strftime(t('time.format'))
-%td= practice.end_time.strftime(t('time.format'))
+%p
+  ="#{ t('daynames')[practice.day]}, #{practice.start_time.strftime(t('time.format')) } - #{ practice.end_time.strftime(t('time.format'))}"
