Added poster for Fabios event

--- a/app/views/static/construction.html.haml
+++ b/app/views/static/construction.html.haml
@@ -36,4 +36,4 @@
   %h1 
     Events
   %p
-    =image_tag 'carte_postal2011a.jpg'
+    =link_to image_tag('Feb20flyer-EN-FINAL-v2.jpg'), 'images/Feb20flyer_EN_BIG.jpg'
