Minor updates to intro text and styles.

--- a/app/views/static/construction.html.haml
+++ b/app/views/static/construction.html.haml
@@ -4,8 +4,7 @@
   Capoeira Angola in Ottawa
 #content_body  
   %p
-    Welcome! to the website of Grupo de Capoeira Semente do Jogo de Angola in Ottawa. Our website is still under construction but this page will tell you when and where you can take Capoeira Angola classes.
-
+    Welcome to the website of the Ottawa chapter of Grupo de Capoeira Semente do Jogo de Angola founded by Mestre Jogo de Dentro (Salvador, Brazil).
   %p
     Capoeira, an art form blending combat, dance, music and ritual, originated with forms of resistance invented by African people taken to Brazil as slaves from the 16th to 19th centuries. It has survived the centuries as a moving expression of the history and culture of Brazil’s African peoples.
 
@@ -13,23 +12,25 @@
     “Capoeira Angola” was developed by the celebrated Mestre (“master”) Vicente Ferreira Pastinha as a formal learning system to preserve capoeira as it once was passed on from generation to generation.  It challenges both the mind and body and cultivates inner discipline and the well-being of the individual as a whole, in a spirit of friendship and non-violence.
 
   %p
-    Ottawa classes are led by Alex Stephens, a student of Mestre Jogo de Dentro (Salvador Brazil), founder of Grupo de Capoeira Semente do Jogo de Angola and Contramestra Colette (Montreal, Quebec).
+    Ottawa classes are led by Alex Stephens, a student of Mestre Jogo de Dentro (Salvador Brazil), and Contramestra Colette (Montreal, Quebec).
+  
+  %p.centered
+    All are welcome. 
+  %p.centered  
+    Please come and try a first class free of charge!
 
-  %p
-    All are welcome. Please come and try a first class free of charge!
-
-  %p
+  %p.centered
     TRAINING SCHEDULE & LOCATION
-  %p
+  %p.centered
     Thursday 7:15-9:15 p.m. Studio B at Artscourt  2 Daly Ave., Ottawa, ON
 
-  %p
+  %p.centered
     Sunday 2:30-4:45 p.m. Bronson Centre  211 Bronson Ave., Ottawa, ON
 
-  %p
+  %p.centered
     CONTACT
 
-  %p
+  %p.centered
     Alex Stephens 613.293.6947 capoeira.angola at bell.net
 
 
