--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,27 @@ html { height: 100% }
   height: 600px;
 
 }
+.event{
+  width:596px;
+  text-align:center;
+  margin-top:1em;
+  margin-bottom:1em;
+  border: 2px solid #00923f;
+  border-radius: 10px 10px 0px 0px;
+  -moz-border-radius: 10px 10px 0px 0px;
+  -webkit-border-top-right-radius: 10px;
+  -webkit-border-top-left-radius: 10px;
+}
+.event_title{
+  color:#fff;
+  font-weight:bold;
+  border: 1px solid #00923f;
+  background-color: #00923f;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 5px;
+}
 
 .centered{
   text-align: center;
