Some corrections and cleanup for events.

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -12,13 +12,13 @@
     %li
       =link_to_unless_current t('practices.index.title'), practices_path if current_user.has_role? :admin 
     %li
-      =link_to_unless_current t('locations.new.new'), new_location_path if current_user.has_role? :admin 
+      =link_to_unless_current t('locations.index.new_location'), new_location_path if current_user.has_role? :admin 
 
     %li
-      =link_to_unless_current t('practices.new.new'), new_practice_path if current_user.has_role? :admin 
+      =link_to_unless_current t('practices.index.new_practice'), new_practice_path if current_user.has_role? :admin 
   
     %li
-      =link_to_unless_current t('events.new.new'), new_event_path if current_user.has_role? :admin 
+      =link_to_unless_current t('events.index.new_event'), new_event_path if current_user.has_role? :admin 
 
   -if anybody_signed_in?
     %li
