--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -5,7 +5,7 @@
   -if current_user
     %span.action
       = link_to t('show'), event
-      = link_to t('edit'), edit_event_path(event) if current_user.roles.include? :admin
-      = link_to t('destroy'), event, :confirm => I18n.t('are_you_sure'), :method => :delete if current_user.roles.include? :admin
+      = link_to t('edit'), edit_event_path(event) if current_user.has_role? :admin
+      = link_to t('destroy'), event, :confirm => I18n.t('are_you_sure'), :method => :delete if current_user.has_role? :admin
 
   =link_to image_tag(event.poster.url(:medium)), event.poster.url
