--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,12 @@ html { height: 100% }
 img{
   border:none;
 }
+#errorExplanation{
+ margin-bottom: 1em;  
+}
+#errorExplanation > li{
+  list-style-type:none;
+}
 
 .event{
   width:596px;
