--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -1,7 +1,7 @@
 =div_for event do
   %div.event_title_bar 
     %div.event_title
-      ="#{event.start_date.strftime('%b %d %Y')}: #{event.title}"
+      ="#{event.start_date.strftime('%b %d %Y')}: #{event.title}" if event.start_date
   -if current_user
     %span.action
       = link_to t('show'), event
