--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,12 +1,14 @@
 %ul{:id => 'nav'}
 
   %li
-    =link_to_unless_current t('home'), root_path
+    =link_to_unless_current t('home'), 'welcome'
   %li
     =link_to_unless_current t('locations.index.title'), locations_path
  
   %li
     =link_to_unless_current t('events.index.title'), events_path
+  %li
+    =link_to_unless_current t('nav.about'), 'about'
 
   -if anybody_signed_in?
     %li
