Stylish rounded corners for the locations map.

--- a/app/views/locations/index.html.haml
+++ b/app/views/locations/index.html.haml
@@ -1,6 +1,8 @@
 
 =javascript_include_tag 'locations'
-
-
-#map_canvas
-  
+#container
+  .topleft
+  .topright
+  #map_canvas
+  .bottomleft
+  .bottomright
