--- a/app/views/shared/_admin.html.haml
+++ b/app/views/shared/_admin.html.haml
@@ -11,6 +11,6 @@
     %li
       =link_to_unless_current t('events.index.new_event'), new_event_path if current_user.has_role? :admin 
     %li
-      =link_to_unless_current t('admin.edit_welcome'), '/welcome/edit' if current_user.has_role? :admin 
+      =link_to_unless_current t('admin.edit_welcome'), gcsja_edit_url(:attr => "welcome") if current_user.has_role? :admin 
     %li
-      =link_to_unless_current t('admin.edit_about'), '/about/edit' if current_user.has_role? :admin 
+      =link_to_unless_current t('admin.edit_about'), gcsja_edit_url(:attr => "about") if current_user.has_role? :admin 
