--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,14 +1,14 @@
 %ul{:id => 'nav'}
 
   %li
-    =link_to_unless_current t('nav.home'), '/welcome'
+    =link_to_unless_current t('nav.home'), gcsja_show_path(:attr => 'welcome')
   %li
     =link_to_unless_current t('locations.index.title'), locations_path
  
   %li
     =link_to_unless_current t('events.index.title'), events_path
   %li
-    =link_to_unless_current t('nav.about'), '/about'
+    =link_to_unless_current t('nav.about'), gcsja_show_path(:attr => 'about')
 
 
   -if anybody_signed_in?
