Switched to three column layout.

--- a/app/views/gcsjas/welcome.html.haml
+++ b/app/views/gcsjas/welcome.html.haml
@@ -1,2 +1,22 @@
+-content_for :left do
+  %p
+    Practice times:
+  -@locations.each do |location|
+    -location.practices.each do |practice|
+      %p
+        ="#{t('daynames')[practice.day]} #{practice.start_time.strftime(t('time.format'))}-#{practice.end_time.strftime(t('time.format'))} #{practice.location.name} #{practice.location.address}"
+
+  %p
+    CONTACT:
+  %p
+    Alex Stephens 613.293.6947 capoeira.angola at bell.net 
+-content_for :right do
+  %p
+    Latest Events:
+  -@events.each do |event|
+    %p
+      ="#{event.start_date}:"
+    %p
+      =link_to image_tag(event.poster(:thumb)), events_path 
 %p
   =parse_haml @gcsja.welcome
