--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -12,7 +12,19 @@
     %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
     =javascript_include_tag 'locations'
   %body{:onload => 'initialize()'}
-    
-    =render :partial => 'shared/nav'
-    = yield
- 
+    #content
+      #header
+        =image_tag 'gcsja_logo_99x110.png'
+        #navigation
+          =render :partial => 'shared/nav'
+      %div{:class => "colmask threecol"}
+        .colmid
+          .colleft
+            .col1
+              =yield
+            .col2
+              =yield :left
+            .col3
+              =yield :right
+      #footer
+        =render 'shared/footer'
