--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,42 +1,40 @@
 /*Jogos green: 00923f*/
-html, body {
-height: 100%;
-margin: 0;
-}
-#container {
-position:relative;
-width:596px;
-}
-.topleft, .topright, .bottomleft, .bottomright {
-position:absolute;
-z-index:1000;
-background-image: url(/images/corners.png);
-width:20px;
-height:20px;
-}
-.topleft {
-left: 0; 
-top: 0;
-}
-.topright {
-right: 0;
-top: 0;
-background-position: top right;
-}
-.bottomright {
-right: 0; 
-bottom: 0; 
-background-position: bottom right;
-}
-.bottomleft {
-left: 0; 
-bottom: 0; 
-background-position: bottom left;
-}
-#map_canvas {
-width: 596px; 
-height: 600px;
-}
+/*Rounded corners for the map*/
+  #container {
+    position:relative;
+    width:596px;
+  }
+  .topleft, .topright, .bottomleft, .bottomright {
+    position:absolute;
+    z-index:1000;
+    background-image: url(/images/corners.png);
+    width:20px;
+    height:20px;
+  }
+
+  .topleft {
+    left: 0; 
+    top: 0;
+  }
+  .topright {
+    right: 0;
+    top: 0;
+    background-position: top right;
+  }
+  .bottomright {
+    right: 0; 
+    bottom: 0; 
+    background-position: bottom right;
+  }
+  .bottomleft {
+    left: 0; 
+    bottom: 0; 
+    background-position: bottom left;
+  }
+  #map_canvas {
+    width: 596px; 
+    height: 600px;
+  }
 
 img{
   border:none;
@@ -47,7 +45,7 @@ img{
 #errorExplanation > li{
   list-style-type:none;
 }
-
+/*
 .event{
   width:596px;
   text-align:center;
@@ -73,53 +71,59 @@ img{
 .centered{
   text-align: center;
 }
+*/
 
 .infowindow_actions li{
   display: inline;
 }
-
+/*
 body {
   background-color: #fff;
   height: 100%;
   margin: 0px;
   padding: 0px;
   color: #333;
-  margin-left: auto;
-  margin-right: auto;
-  width: 596px;
 }
-
+*/
 @font-face{
   font-family: impossibilium;
   src: url('imposs_accents.ttf') format('truetype');
 }
-#nav {
+#navigation {
   border-top: 2px solid;
   border-bottom: 4px solid #00923f;
-  background-color: #000;
   border-radius: 0px 0px 10px 10px;
   -moz-border-radius: 0px 0px 10px 10px;
   -webkit-border-bottom-right-radius: 10px;
   -webkit-border-bottom-left-radius: 10px;
   font-size:1.2em;
 }
-#nav a {
+ul{
+margin-top: 0px;
+margin-bottom 0px;
+}
+#navigation a {
   color: #fff;
   text-decoration:none;
 }
-#nav a:hover{
+#navigation a:hover{
   text-decoration:underline;
 }
-#nav {
+
+#navigation {
   color: #fff;
 }
-#nav li{
+
+#navigation li{
   font-family:impossibilium;
   display:inline;
 }
 
-#content_body {
+/*
+#navigation{
+width: 696px;
 }
+
 h1{
   text-align:center;
   font-family:impossibilium;
@@ -127,6 +131,7 @@ h1{
 }
 p{
  /* font-family:impossibilium; */
+/*
   font-size:1em;
 }
 
@@ -150,13 +155,13 @@ pre {
 a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
-
+*/
 div.field, div.actions {
   margin-bottom: 10px;
 }
 
-#notice {
-  color: green;
+.notice {
+  color: #000;
 }
 
 .field_with_errors {
@@ -188,4 +193,162 @@ div.field, div.actions {
 #error_explanation ul li {
   font-size: 12px;
   list-style: square;
+}
+
+
+body {
+  padding:0;
+  border:0;     /* This removes the border around the viewport in old versions of IE */
+  width:0%;
+  background:#fff;
+  font-size:0.8em;
+}
+
+
+a:hover {
+  color:#fff;
+  text-decoration:none;
+}
+h1, h2, h3 {
+  margin:.8em 0 .2em 0;
+  padding:0;
+  font-family:impossibilium;
+  padding-left:8px;
+  padding-right:8px;
+}
+p {
+  margin:.4em 0 .8em 0;
+  padding-left:8px;
+  padding-right:8px;
+}
+img {
+  margin:10px 0 5px;
+}
+
+/* Header styles */
+#header {
+  clear:both;
+  float:left;
+  width:1000px;
+}
+#header {
+  text-align: center;
+  border-bottom:1px solid #000;
+}
+#header p,
+#header h1,
+#header h2 {
+  padding:.4em 15px 0 15px;
+  margin:0;
+}
+#header ul {
+  clear:left;
+  float:left;
+  width:100%;
+  list-style:none;
+  margin:4px 0 0 0;
+  padding:0;
+}
+#header ul li {
+  display:block;
+  background:#00923f;
+  float:left;
+  margin:0 0 0 1px;
+  padding:3px 10px;
+  text-align:center;
+  color:#fff;
+  text-decoration:none;
+  position:relative;
+  left:15px;
+  line-height:1.3em;
+}
+#header ul li a:hover {
+  color:#fff;
+}
+#header ul li a.active,
+#header ul li a.active:hover {
+  color:#fff;
+  background:#000;
+  font-weight:bold;
+}
+#header ul li a span {
+  display:block;
+}
+/* 'widths' sub menu */
+#layoutdims {
+  clear:both;
+  background:#00923f;
+  border-top:4px solid #000;
+  margin:0;
+  padding:6px 15px !important;
+  text-align:right;
+}
+/* column container */
+.colmask {
+  position:relative;  /* This fixes the IE7 overflow hidden bug */
+  clear:both;
+  float:left;
+  width:1000px;     /* width of whole page */
+  overflow:hidden;    /* This chops off any overhanging divs */
+}
+/* common column settings */
+.colright,
+.colmid,
+.colleft {
+  float:left;
+  width:100%;     /* width of page */
+  position:relative;
+}
+.col1,
+.col2,
+.col3 {
+  float:left;
+  position:relative;
+  padding:0 0 1em 0;  /* no left and right padding on columns, we just make them narrower instead 
+          only padding top and bottom is included here, make it whatever value you need */
+  overflow:hidden;
+}
+/* 3 Column settings */
+.threecol {
+  background:#eeeeee;   /* right column background colour */
+  min-height: 600px;
+}
+.threecol .colmid {
+  right:200px;      /* width of the right column */
+  background:#fff;    /* center column background colour */
+}
+.threecol .colleft {
+  right:600px;      /* width of the middle column */
+  background:#eeeeee; /* left column background colour */
+}
+.threecol .col1 {
+  width:596px;      /* width of center column content (column width minus padding on either side) */
+  left:100%;      /* 100% plus left padding of center column */
+  min-height: 600px;
+}
+.threecol .col2 {
+  width:190px;      /* Width of left column content (column width minus padding on either side) */
+  left:21%;    /* width of (right column) plus (center column left and right padding) plus (left column left padding) */
+}
+.threecol .col3 {
+  width:190px;      /* Width of right column content (column width minus padding on either side) */
+  left:82%;     /* Please make note of the brackets here:
+          (100% - left column width) plus (center column left and right padding) plus (left column left and right padding) plus (right column left padding) */
+}
+/* Footer styles */
+#footer {
+  clear:both;
+  float:left;
+  width:1000px;
+  text-align:center;
+  border-top:1px solid #000;
+}
+#footer p {
+  padding:10px;
+  margin:0;
+  font-size: 0.6em;
+}
+#content{
+position:absolute;
+margin-left:10%;
 }
