--- a/app/views/gcsjas/welcome.html.haml
+++ b/app/views/gcsjas/welcome.html.haml
@@ -1,17 +1,17 @@
 -content_for :left do
-  %p
+  %p.sidebar_title
     Practice times:
   -@locations.each do |location|
     -location.practices.each do |practice|
       %p
-        ="#{t('daynames')[practice.day]} #{practice.start_time.strftime(t('time.format'))}-#{practice.end_time.strftime(t('time.format'))} #{practice.location.name} #{practice.location.address}"
+        ="#{t('daynames')[practice.day]} #{practice.start_time.strftime(t('time.format'))} - #{practice.end_time.strftime(t('time.format'))} #{practice.location.name} #{practice.location.address}"
 
   %p
     CONTACT:
   %p
     Alex Stephens 613.293.6947 capoeira.angola at bell.net 
 -content_for :right do
-  %p
+  %p.sidebar_title
     Latest Events:
   -@events.each do |event|
     %p
