--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,161 +1,80 @@
 /*Jogos green: 00923f*/
 /*Rounded corners for the map*/
-  #container {
-    position:relative;
-    width:596px;
-  }
-  .topleft, .topright, .bottomleft, .bottomright {
-    position:absolute;
-    z-index:1000;
-    background-image: url(/images/corners.png);
-    width:20px;
-    height:20px;
-  }
+.sidebar_title {
+  font-weight: bold;
+}
+p, h1, h2, h3 { font-family: sans-serif;}
 
-  .topleft {
-    left: 0; 
-    top: 0;
-  }
-  .topright {
-    right: 0;
-    top: 0;
-    background-position: top right;
-  }
-  .bottomright {
-    right: 0; 
-    bottom: 0; 
-    background-position: bottom right;
-  }
-  .bottomleft {
-    left: 0; 
-    bottom: 0; 
-    background-position: bottom left;
-  }
-  #map_canvas {
-    width: 596px; 
-    height: 600px;
-  }
-
-img{
-  border:none;
-}
-#errorExplanation{
- margin-bottom: 1em;  
-}
-#errorExplanation > li{
-  list-style-type:none;
-}
-/*
-.event{
-  width:596px;
-  text-align:center;
-  margin-top:1em;
-  margin-bottom:1em;
-  border: 2px solid #00923f;
-  border-radius: 10px 10px 0px 0px;
-  -moz-border-radius: 10px 10px 0px 0px;
-  -webkit-border-top-right-radius: 10px;
-  -webkit-border-top-left-radius: 10px;
-}
-.event_title{
-  color:#fff;
-  font-weight:bold;
-  border: 1px solid #00923f;
-  background-color: #00923f;
-  border-radius: 5px 5px 0px 0px;
-  -moz-border-radius: 5px 5px 0px 0px;
-  -webkit-border-top-right-radius: 5px;
-  -webkit-border-top-left-radius: 5px;
+#container {
 }
 
-.centered{
-  text-align: center;
+.topleft, .topright, .bottomleft, .bottomright {
+  z-index:1000;
+  background-image: url(/images/corners.png);
+  width:20px;
+  height:20px;
 }
-*/
+
+.topleft {
+  left: 0; 
+  top: 0;
+}
+.topright {
+  right: 0;
+  top: 0;
+  background-position: top right;
+}
+.bottomright {
+  right: 0; 
+  bottom: 0; 
+  background-position: bottom right;
+}
+.bottomleft {
+  left: 0; 
+  bottom: 0; 
+  background-position: bottom left;
+}
+#map_canvas {
+  width: 100%; 
+  height: 400px;
+}
+
 
 .infowindow_actions li{
   display: inline;
 }
-/*
-body {
-  background-color: #fff;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  color: #333;
-}
-*/
+
 @font-face{
   font-family: impossibilium;
   src: url('imposs_accents.ttf') format('truetype');
 }
-#navigation {
-  border-top: 2px solid;
-  border-bottom: 4px solid #00923f;
-  border-radius: 0px 0px 10px 10px;
-  -moz-border-radius: 0px 0px 10px 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  font-size:1.2em;
-}
+
 ul{
 margin-top: 0px;
 margin-bottom 0px;
 }
-#navigation a {
+#nav a {
   color: #fff;
   text-decoration:none;
 }
-#navigation a:hover{
+
+#nav a:hover {
   text-decoration:underline;
 }
 
-#navigation {
+#nav {
   color: #fff;
 }
 
-#navigation li{
+#nav li {
   font-family:impossibilium;
   display:inline;
 }
 
-/*
-#navigation{
-width: 696px;
+img {
+  border: none;
 }
 
-h1{
-  text-align:center;
-  font-family:impossibilium;
-  font-size:2em;
-}
-p{
- /* font-family:impossibilium; */
-/*
-  font-size:1em;
-}
-
-img{
-}
-
-
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
-  line-height: 18px;
-  margin-top: 0px;
-}
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
-
-a { color: #000; }
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
-*/
 div.field, div.actions {
   margin-bottom: 10px;
 }
@@ -195,59 +114,54 @@ div.field, div.actions {
   list-style: square;
 }
 
-
-body {
-  padding:0;
-  border:0;     /* This removes the border around the viewport in old versions of IE */
-  width:0%;
-  background:#fff;
-  font-size:0.8em;
-}
-
-
-a:hover {
-  color:#fff;
-  text-decoration:none;
-}
-h1, h2, h3 {
-  margin:.8em 0 .2em 0;
-  padding:0;
-  font-family:impossibilium;
-  padding-left:8px;
-  padding-right:8px;
-}
-p {
-  margin:.4em 0 .8em 0;
-  padding-left:8px;
-  padding-right:8px;
-}
-img {
-  margin:10px 0 5px;
-}
-
-/* Header styles */
-#header {
+/* Footer styles */
+#footer {
   clear:both;
   float:left;
-  width:1000px;
+  width:100%;
+  text-align:center;
+  border-top:1px solid #000;
 }
-#header {
-  text-align: center;
-  border-bottom:1px solid #000;
-}
-#header p,
-#header h1,
-#header h2 {
-  padding:.4em 15px 0 15px;
+#footer p {
+  padding:10px;
   margin:0;
+  font-size: 0.6em;
+}
+#content{
+  width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 670;
+}
+#rightcol{
+  float:right;
+  width:170px;
+  height: 100%;
+}
+#leftcol{
+   float:left;
+   width:150px;
+  height: 100%;
+ }
+#main{
+  padding: 0.5em;
+  text-align:left;
+  margin-left:auto;
+  margin-right:auto;
+  width:596px;
+}
+#content_body{
+}
+#header{
+  text-align: center;
 }
 #header ul {
   clear:left;
   float:left;
   width:100%;
-  list-style:none;
   margin:4px 0 0 0;
   padding:0;
+  border-bottom:4px solid #00923F;
 }
 #header ul li {
   display:block;
@@ -258,7 +172,6 @@ img {
   text-align:center;
   color:#fff;
   text-decoration:none;
-  position:relative;
   left:15px;
   line-height:1.3em;
 }
@@ -270,85 +183,4 @@ img {
   color:#fff;
   background:#000;
   font-weight:bold;
-}
-#header ul li a span {
-  display:block;
-}
-/* 'widths' sub menu */
-#layoutdims {
-  clear:both;
-  background:#00923f;
-  border-top:4px solid #000;
-  margin:0;
-  padding:6px 15px !important;
-  text-align:right;
-}
-/* column container */
-.colmask {
-  position:relative;  /* This fixes the IE7 overflow hidden bug */
-  clear:both;
-  float:left;
-  width:1000px;     /* width of whole page */
-  overflow:hidden;    /* This chops off any overhanging divs */
-}
-/* common column settings */
-.colright,
-.colmid,
-.colleft {
-  float:left;
-  width:100%;     /* width of page */
-  position:relative;
-}
-.col1,
-.col2,
-.col3 {
-  float:left;
-  position:relative;
-  padding:0 0 1em 0;  /* no left and right padding on columns, we just make them narrower instead 
-          only padding top and bottom is included here, make it whatever value you need */
-  overflow:hidden;
-}
-/* 3 Column settings */
-.threecol {
-  background:#eeeeee;   /* right column background colour */
-  min-height: 600px;
-}
-.threecol .colmid {
-  right:200px;      /* width of the right column */
-  background:#fff;    /* center column background colour */
-}
-.threecol .colleft {
-  right:600px;      /* width of the middle column */
-  background:#eeeeee; /* left column background colour */
-}
-.threecol .col1 {
-  width:596px;      /* width of center column content (column width minus padding on either side) */
-  left:100%;      /* 100% plus left padding of center column */
-  min-height: 600px;
-}
-.threecol .col2 {
-  width:190px;      /* Width of left column content (column width minus padding on either side) */
-  left:21%;    /* width of (right column) plus (center column left and right padding) plus (left column left padding) */
-}
-.threecol .col3 {
-  width:190px;      /* Width of right column content (column width minus padding on either side) */
-  left:82%;     /* Please make note of the brackets here:
-          (100% - left column width) plus (center column left and right padding) plus (left column left and right padding) plus (right column left padding) */
-}
-/* Footer styles */
-#footer {
-  clear:both;
-  float:left;
-  width:1000px;
-  text-align:center;
-  border-top:1px solid #000;
-}
-#footer p {
-  padding:10px;
-  margin:0;
-  font-size: 0.6em;
-}
-#content{
-position:absolute;
-margin-left:10%;
 }
