--- a/app/views/layouts/gcsjas.html.haml
+++ b/app/views/layouts/gcsjas.html.haml
@@ -12,16 +12,13 @@
     #content
       #header
         =image_tag 'gcsja_logo_99x110.png'
-        #navigation
-          =render :partial => 'shared/nav'
-      %div{:class => "colmask threecol"}
-        .colmid
-          .colleft
-            .col1
-              =yield
-            .col2
-              =yield :left
-            .col3
-              =yield :right
+        =render :partial => 'shared/nav'
+      #rightcol
+        =yield :right
+      #leftcol
+        =yield :left
+      #main
+        =yield
+      #clear
       #footer
         =render 'shared/footer'
