Adjusted font size. Applied font to a's that were missed.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,15 @@
 .sidebar_title {
   font-weight: bold;
 }
-p, h1, h2, h3 { font-family: sans-serif;}
+p, h1, h2, h3, a { font-family: sans-serif;}
+
+h1 {
+  font-size:18px;
+}
+
+p {
+  font-size: 14px;
+}
 
 #container {
 }
@@ -56,6 +64,7 @@ margin-bottom 0px;
 #nav a {
   color: #fff;
   text-decoration:none;
+  font-family:impossibilium;
 }
 
 #nav a:hover {
