--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html
   %head
+    %meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
     %meta{:name => 'keywords', :content => 'capoeira ottawa'}
     %meta{:name => 'description', :content => "Capoeira Angola Ottawa is the Ottawa branch of Mestre Jogo De Dentro's Groupo Semente Do Jogo De Angola."}
     %title
