Added language switching.

--- a/app/views/layouts/gcsjas.html.haml
+++ b/app/views/layouts/gcsjas.html.haml
@@ -11,7 +11,7 @@
   %body
     #content
       #header
-        =image_tag 'gcsja_logo_99x110.png'
+        =image_tag 'gcsja_logo_99x110.png', :class => "logo"
         =render :partial => 'shared/nav'
       #rightcol
         =yield :right
