--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -13,7 +13,7 @@
   %body{:onload => 'initialize()'}
     #content
       #header
-        =image_tag 'gcsja_logo_99x110.png'
+        =image_tag 'gcsja_logo_99x110.png', :class => "logo"
         =render :partial => 'shared/nav'
       =yield
       #clear
