--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
   %body
     #content
       #header
-        =image_tag 'gcsja_logo_99x110.png'
+        =image_tag 'gcsja_logo_99x110.png', :class => "logo"
         =render :partial => 'shared/nav'
       #content_body
         #rightcol
