--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -22,6 +22,8 @@
   -if anybody_signed_in?
     -if current_user.has_role? :admin
       =render :partial => 'shared/admin'
+  
+  =language_switcher
 
 #flash
   - unless flash.empty?
