--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,7 +77,7 @@ margin-bottom 0px;
 #nav a {
   color: #fff;
   text-decoration:none;
-  font-family:impossibilium;
+  font-family:impossibilium, sans-serif;
 }
 
 #nav a:hover {
@@ -89,7 +89,7 @@ margin-bottom 0px;
 }
 
 #nav li {
-  font-family:impossibilium;
+  font-family:impossibilium, sans-serif;
   display:inline;
 }
 
