Embedded Youtube videos working.

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -8,6 +8,8 @@
   %li
     =link_to_unless_current t('events.index.title'), events_path
   %li
+    =link_to_unless_current t('videos.index.title'), videos_path
+  %li
     =link_to_unless_current t('nav.about'), gcsja_show_path(:attr => 'about')
 
 
