--- a/app/views/layouts/gcsjas.html.haml
+++ b/app/views/layouts/gcsjas.html.haml
@@ -21,4 +21,4 @@
       #clear
       #footer
         =render 'shared/footer'
-    =javascript_include_tag :defaults 
+    =javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js', 'rails', 'application'
