--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -8,7 +8,7 @@
     =stylesheet_link_tag 'style' 
     = csrf_meta_tag
     %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
-    =javascript_include_tag :all
+    =javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js', 'rails', 'application'
     =javascript_include_tag 'locations'
   %body{:onload => 'initialize()'}
     #content
