Added Google analytics.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
       Capoeira Angola Ottawa
     = stylesheet_link_tag 'style'
     = csrf_meta_tag
+    =render :partial => 'shared/tracking'
   %body
     #content
       #header
