--- a/app/views/layouts/gcsjas.html.haml
+++ b/app/views/layouts/gcsjas.html.haml
@@ -7,6 +7,7 @@
       Capoeira Angola Ottawa
     = stylesheet_link_tag 'style'
     = csrf_meta_tag
+    =render :partial => 'shared/tracking'
   %body
     #content
       #header
