--- a/app/views/layouts/locations.html.haml
+++ b/app/views/layouts/locations.html.haml
@@ -10,6 +10,7 @@
     %script{:src => "http://maps.google.com/maps/api/js?sensor=true", :type => "text/javascript" }
     =javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js', 'rails', 'application'
     =javascript_include_tag 'locations'
+    =render :partial => 'shared/tracking'
   %body{:onload => 'initialize()'}
     #content
       #header
