Major CSS surgery.

--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -1,30 +1,30 @@
-%ul{:id => 'nav'}
-
-  %li
-    =link_to_unless_current t('nav.home'), gcsja_show_path(:attr => 'welcome')
-  %li
-    =link_to_unless_current t('locations.index.title'), locations_path
- 
-  %li
-    =link_to_unless_current t('events.index.title'), events_path
-  %li
-    =link_to_unless_current t('videos.index.title'), videos_path
-  %li
-    =link_to_unless_current t('nav.about'), gcsja_show_path(:attr => 'about')
-
-
-  -if anybody_signed_in?
+%div{:id => 'nav'}
+  %ul
     %li
-      =link_to t('devise.sessions.sign_out_link'), destroy_user_session_path
-  -else    
+      =link_to_unless_current t('nav.home'), gcsja_show_path(:attr => 'welcome')
     %li
-      =link_to t('devise.sessions.sign_in_link'), new_user_session_path
-        
+      =link_to_unless_current t('locations.index.title'), locations_path
+   
+    %li
+      =link_to_unless_current t('events.index.title'), events_path
+    %li
+      =link_to_unless_current t('videos.index.title'), videos_path
+    %li
+      =link_to_unless_current t('nav.about'), gcsja_show_path(:attr => 'about')
+
+
+    -if anybody_signed_in?
+      %li
+        =link_to t('devise.sessions.sign_out_link'), destroy_user_session_path
+    -else    
+      %li
+        =link_to t('devise.sessions.sign_in_link'), new_user_session_path
+          
 
   -if anybody_signed_in?
     -if current_user.has_role? :admin
       =render :partial => 'shared/admin'
-  
+
   =language_switcher
 
 #flash
