--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,12 @@
  padding: 0.3em; 
 }
 
+.event img{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #language_switcher{
   padding-left:10px;
   padding-right: 80px;
@@ -186,7 +192,7 @@ div.field, div.actions {
 #main{
   margin-left:200px;
   margin-right:200px;
-  min-height: 370px;
+  min-height: 450px;
 }
 
 body{
